# composed

./: .gitignore  Dockerfile  package-lock.json  package.json  railway.toml
chatbot/: .gitignore  CLAUDE.md  README.md  pyproject.toml
chatbot/chat-widget/: README.md  SampleChat.tsx
chatbot/docs/: phase-2-upgrades.md  retrieval-test-results.md  sample-taxonomy.md
chatbot/docs/superpowers/plans/: 2026-03-14-hackathon-mvp.md  2026-03-14-streaming-chat-widget.md
chatbot/prompts/: sample-retrieval.md
chatbot/research/: 01-audio-generation-apis.md  02-embeddings-retrieval.md  03-agent-architecture.md  04-music-production-ux.md  05-personalization-learning.md  06-synthesis-and-recommendations.md  06a-tech-stack-synthesis.md  06b-ux-personalization-synthesis.md  07-sample-taxonomy-and-phases.md  08-hackathon-plan.md  09-cymatics-structure.md  10-openai-agent-sdk.md
chatbot/sample_agent/: __init__.py  agent.py  catalog.py  cli.py  ingest.py  retrieval.py  schema.py  server.py  sse.py
chatbot/samples/_index/: README.md  catalog.jsonl
chatbot/samples/_templates/: sample.sidecar.json
chatbot/scripts/: setup-samples.sh
chatbot/tests/: test_agent.py  test_agent_harness.py  test_catalog.py  test_cli.py  test_ingest.py  test_retrieval.py  test_retrieval_quality.py  test_schema.py  test_server.py  test_sse.py
docs/: IMPLEMENTATION.md
docs/plans/: 2026-03-14-mozart-jam-session.md
server/: package.json  tsconfig.json
server/src/: events.ts  index.ts  room-manager.ts
shared/: types.ts
web/: jest.config.ts  jest.setup.ts  package.json  playwright.config.ts
(+56 files in other folders)
