[project]
name = "sample-agent"
version = "0.1.0"
description = "Agent-first toolkit for local sound sample retrieval."
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.12",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sample_agent*"]
